Addressed comments
Signed-off-by: Dev Agarwal <devagarwal1803@gmail.com>