@@ -13,18 +13,21 @@ import org.opensearch.common.settings.Setting;
 import org.opensearch.common.unit.TimeValue;
 import org.opensearch.telemetry.metrics.exporter.OTelMetricsExporterFactory;
 import org.opensearch.telemetry.tracing.exporter.OTelSpanExporterFactory;
+import org.opensearch.telemetry.tracing.sampler.OTelSamplerFactory;
 import org.opensearch.telemetry.tracing.sampler.ProbabilisticSampler;
 import org.opensearch.telemetry.tracing.sampler.ProbabilisticTransportActionSampler;
 
 import java.security.AccessController;
 import java.security.PrivilegedActionException;
 import java.security.PrivilegedExceptionAction;
+import java.util.Arrays;
 import java.util.List;
 
 import io.opentelemetry.exporter.logging.LoggingMetricExporter;
 import io.opentelemetry.exporter.logging.LoggingSpanExporter;
 import io.opentelemetry.sdk.metrics.export.MetricExporter;
 import io.opentelemetry.sdk.trace.export.SpanExporter;
+import io.opentelemetry.sdk.trace.samplers.Sampler;
 
 /**
  * OTel specific telemetry settings.
@@ -118,14 +121,17 @@ public final class OTelTelemetrySettings {
      * Samplers orders setting.
      */
     @SuppressWarnings("unchecked")
-    public static final Setting<List<String>> OTEL_TRACER_SPAN_SAMPLER_CLASS_SETTINGS = Setting.listSetting(
+    public static final Setting<List<Class<Sampler>>> OTEL_TRACER_SPAN_SAMPLER_CLASS_SETTINGS = Setting.listSetting(
         "telemetry.otel.tracer.span.sampler.classes",
-        List.of(ProbabilisticTransportActionSampler.class.getName(), ProbabilisticSampler.class.getName()),
-        samplers -> {
+        Arrays.asList(ProbabilisticTransportActionSampler.class.getName(), ProbabilisticSampler.class.getName()),
+        sampler -> {
             // Check we ourselves are not being called by unprivileged code.
             SpecialPermission.check();
             try {
-                return AccessController.doPrivileged((PrivilegedExceptionAction<String>) () -> samplers);
+                return AccessController.doPrivileged((PrivilegedExceptionAction<Class<Sampler>>) () -> {
+                    final ClassLoader loader = OTelSamplerFactory.class.getClassLoader();
+                    return (Class<Sampler>) loader.loadClass(sampler);
+                });
             } catch (PrivilegedActionException ex) {
                 throw new IllegalStateException("Unable to load sampler class:", ex.getCause());
             }
